--- a/src/App.css
+++ b/src/App.css
@@ -212,7 +212,9 @@ header button {
 
 }
 
+
 .DiaryEditor .input_date{
+
   border: none;
   border-radius: 5px;
   background-color: #ececec;
@@ -303,3 +305,71 @@ header button {
   background-color: #fd565f;
   color: white;
 }
+
+/* Diary */
+
+.DiaryPage{
+
+  & section {
+    width: 100%;
+    margin-bottom: 100px;
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  
+  }
+  & h4 {
+    font-size: 22px;
+    font-weight: bold;
+  }
+  & .diary_img_wrapper {
+    background-color: #ececec;
+    width: 250px;
+    height: 250px;
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  & .emotion_descript {
+    font-size: 25px;
+  }
+  & .diary_img_wrapper_1{
+    background-color: #64c964;
+  }
+  & .diary_img_wrapper_2{
+    background-color: #9dd772;
+  }
+  & .diary_img_wrapper_3{
+    background-color: #fdce17;
+  }
+  & .diary_img_wrapper_4{
+    background-color: #fd8446;
+  }
+  & .diary_img_wrapper_5{
+    background-color: #fd565f;
+  }
+  & .diary_content_wrapper{
+    width: 100%;
+    background-color: #ececec;
+    border-radius: 5px;
+    word-break: keep-all;
+    overflow-wrap: break-word;
+  }
+
+  & .diary_content_wrapper p{
+    padding: 20px;
+    text-align: left;
+    font-size: 20px;
+    font-family: "Yeon Sung";
+    font-weight: 400;
+    line-height: 2.5;
+    
+  }
+}
+
+
